修改 dockerfile 默认设置 JVM 参数
-Xms1g -Xmx1g -XX:MetaspaceSize=128m